feat(api): ranked-maps with specific player scores endpoint
