# src/GuildSaber.Website/openapi/GuildSaber.Api.json
@@ -1120,6 +1120,117 @@
         }
       }
     },
+    "/ranked-maps/{rankedMapId}/with-scores/{playerId}": {
+      "get": {
+        "tags": [
+          "RankedMaps"
+        ],
+        "summary": "Get a ranked map with the player's point scores.",
+        "description": "Get a ranked map in the server by its Id, including the player's best point scores on the map.",
+        "operationId": "GetRankedMapWithScores",
+        "parameters": [
+          {
+            "name": "rankedMapId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "playerId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RankedMapWithScores"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                },
+                "example": {
+                  "type": "https://tools.ietf.org/html/rfc9110#section-15.5.5",
+                  "title": "Not Found",
+                  "status": 404,
+                  "instance": "GET ranked-maps/{rankedMapId}/with-scores/{playerId}",
+                  "traceId": "00-0123456789abcdef0123456789abcdef-0123456789abcdef-00"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/ranked-maps/{rankedMapId}/with-scores/@me": {
+      "get": {
+        "tags": [
+          "RankedMaps"
+        ],
+        "summary": "Get a ranked map with the current player's point scores.",
+        "description": "Get a ranked map in the server by its Id, including the current player's best point scores on the map.",
+        "operationId": "GetRankedMapWithScoresAtMe",
+        "parameters": [
+          {
+            "name": "rankedMapId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RankedMapWithScores"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                },
+                "example": {
+                  "type": "https://tools.ietf.org/html/rfc9110#section-15.5.5",
+                  "title": "Not Found",
+                  "status": 404,
+                  "instance": "GET ranked-maps/{rankedMapId}/with-scores/@me",
+                  "traceId": "00-0123456789abcdef0123456789abcdef-0123456789abcdef-00"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer": [ ]
+          }
+        ]
+      }
+    },
     "/contexts/{contextId}/ranked-maps": {
       "get": {
         "tags": [
@@ -1351,7 +1462,7 @@
           "Context.RankedMaps"
         ],
         "summary": "Create a ranked map for a context.",
-        "description": "    This endpoint:\n    * Returns 200 OK with ranked map details when created successfully.\n* Returns 401 Unauthorized when the guild has reached its maximum number of ranked maps.\n* Returns 400 Bad Request with validation details when validation fails.\n* Returns 404 Not Found when the map is not found on BeatSaver.\n* Returns 429 Too Many Requests when rate limited by BeatSaver API.\n* Returns 500 Internal Server Error when BeatSaver API fails.",
+        "description": "    This endpoint:\r\n    * Returns 200 OK with ranked map details when created successfully.\r\n* Returns 401 Unauthorized when the guild has reached its maximum number of ranked maps.\r\n* Returns 400 Bad Request with validation details when validation fails.\r\n* Returns 404 Not Found when the map is not found on BeatSaver.\r\n* Returns 429 Too Many Requests when rate limited by BeatSaver API.\r\n* Returns 500 Internal Server Error when BeatSaver API fails.",
         "operationId": "CreateRankedMap",
         "parameters": [
           {
@@ -2471,6 +2582,13 @@
             }
           },
           {
+            "name": "search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "page",
             "in": "query",
             "schema": {
@@ -2552,6 +2670,13 @@
             "name": "pointId",
             "in": "path",
             "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "search",
+            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -2646,6 +2771,13 @@
             "name": "categoryId",
             "in": "path",
             "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "search",
+            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -3315,7 +3447,7 @@
           "Context.Levels"
         ],
         "summary": "Get all levels in a context, optionally filtered by category.",
-        "description": "- No parameters: Returns all levels.\n- hasCategory=false: Only return levels with no category.\n- category=5: Returns levels with category 5.",
+        "description": "- No parameters: Returns all levels.\r\n- hasCategory=false: Only return levels with no category.\r\n- category=5: Returns levels with category 5.",
         "operationId": "GetLevels",
         "parameters": [
           {
@@ -5460,7 +5592,7 @@
             "$ref": "#/components/schemas/RankedMapRequirements"
           },
           "manualRating": {
-            "description": "Used to force a specific difficulty and/or accuracy star rating for the map.\nIf null, the star ratings will be calculated automatically by BeatLeader's ExMachina.",
+            "description": "Used to force a specific difficulty and/or accuracy star rating for the map.\r\nIf null, the star ratings will be calculated automatically by BeatLeader's ExMachina.",
             "$ref": "#/components/schemas/ManualRating"
           },
           "categoryIds": {
